# db-loader

./: .gitignore  BUGS_FIXED.md  Class1.cs  EWMA_EXPLAINED.md  Makefile  README.md  config.toml  config.toml.bak  config_sc.toml  example.config.toml  pyproject.toml  pyproject.toml.bak  pyrightconfig.json  test_boolean_columns.py  test_column_inference.py  test_retry_logic.py
src/data_loader/: __main__.py  cli.py  core.py
tests/: test_config.toml  test_loader.py
