[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "db-loader"
version = "0.1.0"
description = "Lightweight configurable CSV/Excel -> SQL loader"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "sqlalchemy>=2.0",
  "pandas>=2.2",
  "polars>=0.20",
  "pyarrow>=14.0",
  "toml>=0.10.2",
  "openpyxl>=3.1",
  "tqdm>=4.67",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "coverage>=7.4",
  "ruff>=0.5",
  "mypy>=1.8",
  "black>=24.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
loader = "data_loader.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
